<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.driverProfileUi.InitProfileActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="@dimen/_15sdp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/sf_ui_display_medium"
                android:textColor="@color/bGo_textColorPrimary"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome2"/>
            <TextView
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/sf_ui_display"
                android:textColor="@color/bGo_textColorSecondary"
                android:layout_gravity="start"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content"
                android:text="@string/tips1"/>
            <TextView
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/sf_ui_display_medium"
                android:textColor="@color/bGo_textColorPrimary"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step1"/>
            <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:cardElevation="@dimen/_4sdp"
                android:layout_width="match_parent"
                app:cardUseCompatPadding="true"
                android:layout_height="@dimen/_110sdp">

                <LinearLayout
                    android:layout_marginRight="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:gravity="start|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:paddingVertical="@dimen/_15sdp"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:src="@drawable/file"/>
                    <LinearLayout
                        android:paddingVertical="@dimen/_10sdp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:justificationMode="inter_word"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:textSize="@dimen/_12ssp"
                            android:fontFamily="@font/sf_ui_display"
                            android:textColor="@color/bGo_textColorProfile"
                            android:layout_gravity="start"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_text"/>
                        <TextView
                            android:id="@+id/initProfile_profileDocumentText"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:textSize="@dimen/_12ssp"
                            android:fontFamily="@font/sf_ui_display_medium"
                            android:textColor="@color/bGo_mainColor"
                            android:layout_gravity="start"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/verified"/>
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/sf_ui_display_medium"
                android:textColor="@color/bGo_textColorPrimary"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step2"/>
            <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:cardElevation="@dimen/_4sdp"
                android:layout_width="match_parent"
                app:cardUseCompatPadding="true"
                android:layout_height="@dimen/_110sdp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="start|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/check"
                        android:paddingVertical="@dimen/_15sdp"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:src="@drawable/check"/>
                    <LinearLayout
                        android:layout_marginRight="@dimen/_5sdp"
                        android:paddingVertical="@dimen/_10sdp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_marginTop="@dimen/_5sdp"
                            android:textSize="@dimen/_12ssp"
                            android:fontFamily="@font/sf_ui_display"
                            android:textColor="@color/bGo_textColorProfile"
                            android:layout_gravity="start"
                            android:layout_width="match_parent"
                            android:justificationMode="inter_word"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_text2"/>
                        <TextView
                            android:id="@+id/initProfile_vehicleDocumentText"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:textSize="@dimen/_12ssp"
                            android:fontFamily="@font/sf_ui_display_medium"
                            android:textColor="@color/bGo_mainColor"
                            android:layout_gravity="start"
                            android:textStyle="bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/verified"/>
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/sf_ui_display_medium"
                android:textColor="@color/bGo_textColorPrimary"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_it_works"/>
            <androidx.recyclerview.widget.RecyclerView
                tools:listitem="@layout/tutorial_layout"
                android:id="@+id/howItWorks_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_122sdp"/>
            <TextView
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/sf_ui_display_medium"
                android:textColor="@color/bGo_textColorPrimary"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"/>
            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/call"/>
                <ImageView
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/messenger"/>
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>